<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_following"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_following" />
        <item
            android:id="@+id/nav_followers"
            android:icon="@drawable/ic_people"
            android:title="@string/nav_followers" />
        <item
            android:id="@+id/nav_invites"
            android:icon="@drawable/ic_person_add"
            android:title="@string/nav_invites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>