<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.michael.apps.sportshi.model.Config">

    <item android:id="@+id/action_refresh"
        android:icon="@mipmap/refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_category"
        android:icon="@drawable/sports"
        android:title="@string/action_category"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_tag"
        android:icon="@drawable/ic_person_add_white"
        android:title="@string/action_tag"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_image"
        android:icon="@drawable/ic_add_photo"
        android:title="@string/action_image"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_location"
        android:icon="@drawable/ic_add_location"
        android:title="@string/action_location"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_post"
        android:icon="@drawable/ic_send"
        android:title="@string/action_post"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>